--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    /* background of whole page */
+    /* background */
     background-color: #0F0F0F;
 }
 
@@ -17,14 +17,27 @@ body{
     font-family: Verdana, sans-serif;
     line-height: 1.5;
     font-size: 16px;
+    text-shadow: 4px 4px #ffa6c9;
     /* element styling */
-    width: 600px;
+    width: 650px;
     margin: 0 auto;
     padding: 10px;
 }
 
+#container img{
+    /* image styling */
+    border-radius: 15px;
+    box-shadow: 4px 4px #ffa6c9;
+}
+
 #main-content .recipe-list img{
-    height: auto;
+    /* image styling */
+    height: 250px;
     width: 250px;
-    padding: 10px;
+    margin: 0px 25px 0px 25px;
+}
+
+#main-content .recipe-list a{
+    /* link styling */
+    text-decoration: none;
 }
