--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
+/* background of whole page */
 body{
-    /* background */
+    /* background styling*/
     background-color: #0F0F0F;
 }
-
+/* elements w/in container element */
 #container{
     /* background styling */
     background-color: #272727;
@@ -11,33 +12,50 @@ body{
     border-color: white;
     border-width: 10px;
     border-radius: 15px;
+    box-shadow: 0 0 10px #ffa6c9;
     /* text styling */
     text-align: center;
     color: white;
     font-family: Verdana, sans-serif;
     line-height: 1.5;
     font-size: 16px;
-    text-shadow: 4px 4px #ffa6c9;
     /* element styling */
     width: 650px;
     margin: 0 auto;
-    padding: 10px;
+    padding-bottom: 15px;
 }
-
+/* specified headers */
+h1, h2{
+    text-shadow: 0 0 10px #ffa6c9;
+}
+/* images that are in the container element */
 #container img{
     /* image styling */
     border-radius: 15px;
     box-shadow: 4px 4px #ffa6c9;
 }
-
+/* images inside main-content, then recipe list */
 #main-content .recipe-list img{
     /* image styling */
     height: 250px;
     width: 250px;
     margin: 0px 25px 0px 25px;
 }
-
+/* links inside main-content, then recipe list */
 #main-content .recipe-list a{
     /* link styling */
+    text-decoration: none;
+}
+/* images with main-image and recipe-image */
+#main-image.recipe-image img{
+    /* image styling */
+    height: auto;
+    width: 600px;
+    margin: 10px auto;
+}
+/* links w/in navigation */
+#navigation a{
+    /* text styling */
+    color: inherit;
     text-decoration: none;
 }
