--- a/style.css
+++ b/style.css
@@ -59,3 +59,7 @@ h1, h2{
     color: inherit;
     text-decoration: none;
 }
+/* elements inside main-content */
+#main-content{
+    padding: 15px;
+}
