--- a/style.css
+++ b/style.css
@@ -59,6 +59,23 @@ h1, h2{
     color: inherit;
     text-decoration: none;
 }
+
+#navigation a button{
+    background-color: #ffa6c9;
+    color: white;
+    border-radius: 15px;
+    border-color: white;
+    padding: 15px 32px;
+    text-align: center;
+    font-weight: bold;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+
+#navigation a button:hover{
+    box-shadow: 0 0 10px white;
+}
 /* elements inside main-content */
 #main-content{
     padding: 15px;
